--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="assets/Personal CV (Shaon).pdf" class="st-btn st-style1 st-color1" target="_blank">Download CV</a>
+                  <a href="assets/Md. Shaon Hasan CV.pdf" class="st-btn st-style1 st-color1" target="_blank">Download CV</a>
                 </div>
               </div>
             </div>
